@@ -125,6 +125,7 @@
   <ItemGroup>
     <Content Include="Changelog.txt" />
     <Content Include="Images\PreviewImage.png" />
+    <Content Include="Translations\TranslationFiles\ChineseTrad.xml" />
     <Content Include="Translations\TranslationFiles\English.xml" />
     <Content Include="Translations\TranslationFiles\Chinese.xml" />
   </ItemGroup>
